<resources>
    <string name="app_name">Run Tracker</string>
    <!--<string name="title_home">Home</string>-->
    <string name="title_run">Run</string>
    <string name="title_map">Map</string>
    <string name="title_music">Music</string>
    <string name="title_past_runs">Past Runs</string>
    <string name="speed">Speed</string>
    <string name="pace">Pace</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="start_run">Start Run</string>
    <string name="stop_run">Stop Run</string>
</resources>
